--- a/shippable.yml
+++ b/shippable.yml
@@ -1,10 +1,13 @@
-build_environment: Windows
 language: java
-jdk: jdk1.8.0_101
-after_success: 
-	mvn clean package
-	mvn test
+
+jdk:
+   - openjdk 8
+   
+after_success:
+   - mvn clean package
+   - mvn test
+
 notifications:
-	email:
-		recipients:
-			conordonohue@gmail.com
+  email:
+      recipients:
+         - conordonohue@gmail.com
