--- a/shippable.yml
+++ b/shippable.yml
@@ -2,6 +2,9 @@ language: java
 jdk:
    - openjdk 8
    
+before_script: mkdir -p shippable/testresults
+script:
+   - src/test/java/Testing/UsernameTest.java
 after_success:
    - mvn clean package
 
